--- a/src/view/Match.fxml
+++ b/src/view/Match.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -8,25 +9,42 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox layoutX="17.0" layoutY="35.0" prefHeight="41.0" prefWidth="600.0" spacing="30.0" AnchorPane.bottomAnchor="359.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox layoutX="17.0" layoutY="35.0" prefHeight="57.0" prefWidth="600.0" spacing="30.0" AnchorPane.bottomAnchor="343.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player name" textAlignment="CENTER">
-               <font>
-                  <Font name="Helvetica Neue" size="16.0" />
-               </font>
-            </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Level: 01" textAlignment="CENTER">
-               <font>
-                  <Font name="Helvetica Neue" size="16.0" />
-               </font>
-            </Text>
+            <HBox prefHeight="29.0" prefWidth="305.0" spacing="30.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player name" textAlignment="CENTER">
+                     <font>
+                        <Font name="Helvetica Neue" size="16.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Level: 01" textAlignment="CENTER" wrappingWidth="64.31999206542969">
+                     <font>
+                        <Font name="Helvetica Neue" size="16.0" />
+                     </font>
+                  </Text>
+               </children>
+               <HBox.margin>
+                  <Insets left="10.0" top="8.0" />
+               </HBox.margin>
+            </HBox>
+            <HBox prefHeight="37.0" prefWidth="370.0" spacing="20.0">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="200.0" text="I don't wanna play anymore">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </Button>
+                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Settings">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </Button>
+               </children>
+            </HBox>
          </children>
-         <padding>
-            <Insets left="10.0" top="10.0" />
-         </padding>
       </HBox>
       <VBox layoutX="170.0" layoutY="96.0" prefHeight="260.0" prefWidth="260.0" AnchorPane.bottomAnchor="44.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="96.0">
          <children>
